# DEBI-NN

./: README.md
Source/DEBI-Qt6.3/: CMakeLists.txt  DEBI.sln
Source/DEBI-Qt6.3/DataRepresentation/: Array2D.cpp  Array2D.h  CMakeLists.txt  DataRepresentation.vcxproj  DataRepresentation.vcxproj.filters  Export.h  IntrinsicExtensions.h  TabularData.cpp  TabularData.h  Types.h
Source/DEBI-Qt6.3/DataRepresentation/x64/Debug/: DataRepresentation.dll.recipe
Source/DEBI-Qt6.3/Evaluation/: AbstractAnalytics.cpp  AbstractAnalytics.h  AbstractModel.cpp  AbstractModel.h  CMakeLists.txt  ConfusionMatrixAnalytics.cpp  ConfusionMatrixAnalytics.h  DEBINN.cpp  DEBINN.h  DEBINNFactory.cpp  DEBINNFactory.h  DEBINNRenderer.cpp  DEBINNRenderer.h  DEBINeuron.cpp  DEBINeuron.h  DEBIStemCell.h  DataPackage.cpp  DataPackage.h  Evaluation.vcxproj  Evaluation.vcxproj.filters  Export.h  GeneticAlgorithmOptimizer.cpp  GeneticAlgorithmOptimizer.h  LossAnalytics.cpp  LossAnalytics.h  MultiSubsetFoldGenerator.cpp  MultiSubsetFoldGenerator.h  Palette.cpp  Palette.h  TabularDataFilter.cpp  TabularDataFilter.h
Source/DEBI-Qt6.3/FileIo/: CMakeLists.txt  Export.h  FileIo.vcxproj  FileIo.vcxproj.filters  TabularDataFileIo.cpp  TabularDataFileIo.h
Source/DEBI-Qt6.3/TestApplication/: CMakeLists.txt  DEBINNCrossValidator.cpp  DEBINNCrossValidator.h  DEBINNRenderController.cpp  DEBINNRenderController.h  DEBINNRenderController.ui  TestApplication.qrc  TestApplication.vcxproj  TestApplication.vcxproj.filters  main.cpp
Source/DEBI-Qt6.3/TestApplication/x64/Debug/: TestApplication.exe.recipe
(+1540 files in other folders)
